[package]
name = "mnistnet"
version = "0.1.0"
authors = ["Michael Noronha <michaeltnoronha@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.12.1", features = ["serde-1"] }
ndarray-rand = "0.9.0"
rand = "0.6.5"
indicatif = "0.11.0"
csv = "1"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.38"
